# riimote

./: Cargo.toml  README.md
examples/: dice.rs
examples/media/: 10.pcm  11.pcm  12.pcm  2.pcm  3.pcm  4.pcm  5.pcm  6.pcm  7.pcm  8.pcm  9.pcm  dice.pcm  double.pcm
src/: consts.rs  flags.rs  lib.rs  linux_bt.rs  main.rs  wiimote.rs
