[package]
name = "riimote"
description = "Rust Wiimote library"
version = "0.1.0"
authors = ["EthanYidong <ethanyidong@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/EthanYidong/riimote"
exclude = ["examples/media/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
linux-bt = ["tokio", "futures", "bluez-async"]

[dependencies]
hidapi = { version = "1.2", default-features = false, features = ["linux-static-hidraw"] }
bitflags = "1.2"

tokio = { version = "1.0", features = ["time"], optional = true }
futures = { version = "0.3", optional = true }
bluez-async = { version = "0.2", optional = true }

tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"

tracing-subscriber = "0.2"

anyhow = "1.0"

[[example]]
name = "dice"
required-features = ["linux-bt"]
